--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,7 @@
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 220px) and (max-width: 768px) {
+  i {
+    color: #199cdb;
+  }
   /* phần banner */
   .banner {
     position: relative;
@@ -11,87 +14,124 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #f7f7f7;
-    font-size: 12px;
+    font-size: 24px;
   }
-  .banner h1 {
-    font-size: 18px;
-  }
-  /* phần banner */
-
-  /* Nav-bar */
   /* Phần navbar */
-  .navbar-fix {
-    justify-self: start;
-  }
-  .navbar-fix .avartar-item {
-    display: none;
-  }
 
-  .navbar-fix {
+  .navbar-mobile {
     position: relative;
     text-align: center;
     background-color: white;
     overflow: visible;
+    width: 100%;
+    background-color: whitesmoke;
   }
-
-  .navbar-fix a {
+  .navbar-mobile .row {
+    display: block;
+    width: 100%;
+    align-self: center;
+    padding: auto;
+  }
+  .navbar-mobile a {
     display: inline-block;
-    text-align: start;
+    color: black;
+    text-align: center;
     text-transform: uppercase;
     text-decoration: none;
     width: 100%;
-    justify-content: start;
+  }
+  .avatar-item {
+    height: min-content;
+    width: min-content;
+  }
+  .navbar-item {
+    /* height: 50px;
+    width: 90px;
+    width: max-content;
+    position: relative; */
+    border: 1px solid #9ea2a3;
+    box-shadow: 1px 1px 1px rgb(161, 158, 158);
+    height: fit-content;
+    width: 98%;
+    text-align: center;
+    margin: 10px 20px;
+    /* border-radius: 50%;
+    top: -180px;
+    margin-bottom: 15%;
+    left: -10%; */
+  }
+  .avartar-item {
+    display: none;
+  }
+  #avartar .navbar-item {
+    border: 0px;
+  }
+  .navbar-item i {
+    display: flex;
   }
   /* Nav - bar */
-  .navbar-fix .row {
-    margin-top: 26px;
+  .navbar-mobile .row {
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
   }
-  .navbar-fix a:hover {
+  .navbar-mobile a:hover {
     background-color: #ddd;
   }
 
-  .navbar-fix a.active {
+  .navbar-mobile a.active {
     background-color: #04aa6d;
     color: white;
   }
 
-  .navbar-fix span {
-    font-size: 16px;
+  .navbar-mobile span {
+    font-size: 14px;
   }
+  .navbar-mobile img {
+    position: relative;
+    width: 70%;
+    height: 60%;
+    border-radius: 50%;
+    margin-top: 0px;
+    border: 15px solid white;
+    z-index: 10;
+  }
+  /* */
   /* Thông tin  cá nhân */
   .about {
+    position: relative;
     width: 100%;
-    background-color: #efe4e4;
+    background-color: #f7f7f7;
+    align-items: stretch;
   }
   .about h1 {
-    font-size: 32px;
+    margin-top: 30px;
     margin-bottom: 30px;
   }
   .about p {
-    margin-right: 20px;
+    margin-right: 30px;
   }
   .about .section-title {
-    font-size: 28px;
+    font-size: 24px;
     padding-left: 0px;
   }
   /* Mục tiêu nghề nghiệp */
-  .about .target {
-    background-color: #f2efef;
-    width: 100%;
-    padding-right: 20px;
-    padding-left: 20%;
-    font-size: 14px;
+  .target {
+    background-color: #adbcc3;
+    padding-right: 30px;
+    padding-left: 200px;
+    font-size: 16px;
     justify-items: end;
     line-height: 1.8;
-
     font-family: "et-line", sans-serif;
   }
   .about .personal-info {
     padding-left: 30px;
     justify-items: start;
+    background-color: rgb(166, 200, 214);
   }
   .about .personal-info .info-icon {
-    color: #199cdb;
+    color: #0c1bf0;
     padding-top: 15px;
     margin-bottom: 20px;
   }
@@ -99,9 +139,6 @@
     margin: 5px;
   }
   /*job-info Xây dựng phần Thông tin nghề nghiệp  */
-  .job-info-item {
-    width: auto;
-  }
   .job-info .job-info-content ul {
     list-style: none; /* Remove default bullets */
   }
@@ -119,23 +156,25 @@
     display: inline-block; /* Needed to add space between the bullet and the text */
     width: 1em; /* Also needed for space (tweak if needed) */
     margin-left: -1em; /* Also needed for space (tweak if needed) */
-    font-size: 2em;
+    font-size: 1em;
     align-self: center;
   }
   .job-info-item {
-    margin-top: 20px;
+    height: 500px;
     border: 1px solid rgb(188, 185, 185);
     box-shadow: 2px 2px 5px rgb(188, 185, 185);
   }
   .job-info .job-info-tiltle {
-    justify-self: end;
-    padding-right: 50px;
+    justify-items: center;
+    padding-left: 15 px;
+    padding-top: 10px;
   }
   .job-info .job-info-icon {
-    justify-items: start;
+    padding-top: 10px;
+    justify-items: center;
   }
   .job-info .job-info-content h3 {
-    margin: 20px 0 0;
+    font-size: larger;
   }
 
   .job-info .job-info-content p {
@@ -212,17 +251,176 @@
     width: 45px;
     margin: 10px 5px;
   }
-  /* Footer */
-  .footer i {
-    box-sizing: border-box;
-    font-size: 100% !important;
+  /* CHỨNG CHỈ
+.certificate {
+  height: max-content;
+}
+.certificate .section-title {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.grid-item img {
+  width: 45%;
+  margin: 10px;
+}
+
+.certificate .grid-item-content h3 {
+  font-size: medium;
+}
+/* Project */
+  /* .project .container-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+.project .project-item {
+  display: grid;
+  grid-template-rows: 35% 20% 10% 35%;
+  margin: 10px;
+}
+.project .project-item-years {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.project p {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  padding: 5px;
+}
+.project i {
+  width: 30px;
+}
+.project .project-item-title h3 {
+  padding: 20px;
+}
+.project button {
+  border-radius: 15px;
+  width: 80%;
+  height: 30px;
+  padding-bottom: 3px;
+}
+.project tr {
+  box-shadow: 0 -1px 1px rgb(59, 57, 57);
+}
+.project .project-item-content {
+  line-height: 1.5;
+}
+.project img {
+  padding: 20px;
+  width: 100%;
+  height: auto;
+}
+*/
+  */
+/* CHỨNG CHỈ */
+.certificate {
+    background-color: #fbf8fb;
+    margin: 20px;
+    height: 100%;
   }
+  .certificate .grid-item-content {
+    text-align: start;
+    font-size: 13px;
+    line-height: 1.8;
+    padding: 10px;
+  }
+  .certificate .grid-item-content h3 {
+    font-size: large;
+  }
+  .certificate .section-title {
+    margin: 15px;
+  }
+  .grid-item {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    border: 1px solid #da7f25;
+    margin: 15px 0px;
+  }
+
+  .grid-item img {
+    width: 45%;
+    margin: 10px;
+  }
+  .grid-item .grid-item-content {
+    font-size: 13px;
+    line-height: 1.8;
+    padding: 10px;
+  }
+
+  /* Project */
+  .project .project-item {
+    margin-right: 2rem;
+    border: 1px solid rgb(188, 185, 185);
+    box-shadow: 2px 4px 5px rgb(188, 185, 185);
+    padding: 15px;
+  }
+  .project .project-item-years {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    width: 100%;
+  }
+  .project h3 {
+    font-size: large;
+  }
+  .project p {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+    padding: 5px;
+  }
+  .project a {
+    text-decoration: none;
+    text-decoration-color: black;
+  }
+  .project i {
+    width: 30px;
+  }
+  .project .section-title {
+    margin-top: 30px;
+  }
+  .project .project-item-title h3 {
+    padding: 20px;
+  }
+  .project button {
+    border-radius: 15px;
+    width: 80%;
+    height: 30px;
+    padding-bottom: 3px;
+  }
+  .project tr {
+    box-shadow: 0 -1px 1px rgb(59, 57, 57);
+  }
+  .project .project-item-content {
+    border: 1px soild black;
+    text-align: start;
+    color: black;
+    line-height: 1.5;
+  }
+  .project img {
+    text-align: center;
+    width: 100%;
+    height: auto;
+  }
+
+  /* Footer */
+
   .footer i {
-    box-sizing: content-box;
-    font-size: 100% !important;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 200% !important;
+  }
+  .footer span {
+    display: none;
   }
 }
-img {
+
+.banner img {
   width: 100%;
   filter: brightness(80%);
 }
