--- a/css/tablet.css
+++ b/css/tablet.css
@@ -12,7 +12,10 @@
 // `xl` applies to large devices (desktops, less than 1200px)
 @media (max-width: 1199.98px) { ... }
  */
-@media (max-width: 992px) and (min-width: 769px) {
+@media (max-width: 1200px) and (min-width: 769px) {
+  i {
+    color: #199cdb;
+  }
   /* phần banner */
   .banner {
     position: relative;
@@ -21,45 +24,27 @@
   }
   .banner .text-banner {
     position: absolute;
-    top: 15%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #f7f7f7;
     font-size: 24px;
   }
-  /* phần banner */
-
-  /* Nav-bar */
   /* Phần navbar */
-  .navbar-fix .avartar-item {
-    display: none;
-  }
 
-  .navbar-fix {
+  .navbar-tablet {
     position: relative;
     text-align: center;
     background-color: white;
     overflow: visible;
-  }
-
-  .navbar-fix a {
-    display: inline-block;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
     width: 100%;
-    justify-content: start;
+    background-color: whitesmoke;
   }
-  /* Phần navbar */
-
-  .navbar-fix {
-    position: relative;
-    text-align: center;
-    background-color: white;
-    overflow: visible;
+  .navbar-tablet .row {
+    width: 100%;
+    align-self: center;
   }
-
-  .navbar-fix a {
+  .navbar-tablet a {
     display: inline-block;
     color: black;
     text-align: center;
@@ -67,66 +52,86 @@
     text-decoration: none;
     width: 100%;
   }
+  .avatar-item {
+    height: min-content;
+    width: min-content;
+  }
   .navbar-item {
     /* height: 50px;
     width: 90px;
     width: max-content;
     position: relative; */
+    border: 1px solid #9ea2a3;
     box-shadow: 1px 1px 1px rgb(161, 158, 158);
+    height: fit-content;
+    width: fit-content;
     text-align: center;
-    padding-left: 30px;
+    margin: 5px;
     /* border-radius: 50%;
     top: -180px;
     margin-bottom: 15%;
     left: -10%; */
   }
+  .avartar-item {
+    display: none;
+  }
+  #avartar .navbar-item {
+    border: 0px;
+  }
   .navbar-item i {
     display: flex;
   }
   /* Nav - bar */
-  .navbar-fix .row {
-    margin-top: 2%;
+  .navbar-tablet .row {
+    margin-top: 1%;
+    margin-bottom: 1%;
   }
-  .navbar-fix a:hover {
+  .navbar-tablet a:hover {
     background-color: #ddd;
   }
 
-  .navbar-fix a.active {
+  .navbar-tablet a.active {
     background-color: #04aa6d;
     color: white;
   }
 
-  .navbar-fix span {
+  .navbar-tablet span {
     font-size: 14px;
   }
+  .navbar-tablet img {
+    position: relative;
+    width: 70%;
+    height: 60%;
+    border-radius: 50%;
+    margin-top: 0px;
+    border: 15px solid white;
+    z-index: 10;
+  }
+  /* */
   /* Thông tin  cá nhân */
   .about {
-    margin-top: 2%;
     position: relative;
     width: 100%;
-    background-color: #ece6e6;
+    background-color: #f7f7f7;
+    align-items: stretch;
   }
   .about h1 {
-    font-size: 32px;
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   .about p {
-    margin-right: 20px;
+    margin-right: 30px;
   }
   .about .section-title {
-    font-size: 28px;
+    font-size: 32px;
     padding-left: 0px;
   }
   /* Mục tiêu nghề nghiệp */
-  .about .target {
-    height: 100%;
-    align-self: stretch;
-    background-color: #dce6e6;
-    height: 100%;
+  .target {
+    background-color: #adbcc3;
     padding-right: 30px;
-    padding-left: 20%;
-    font-size: 14px;
+    padding-left: 200px;
+    font-size: 16px;
     justify-items: end;
     line-height: 1.8;
     font-family: "et-line", sans-serif;
@@ -134,9 +139,10 @@
   .about .personal-info {
     padding-left: 30px;
     justify-items: start;
+    background-color: rgb(166, 200, 214);
   }
   .about .personal-info .info-icon {
-    color: #199cdb;
+    color: #0c1bf0;
     padding-top: 15px;
     margin-bottom: 20px;
   }
@@ -161,7 +167,7 @@
     display: inline-block; /* Needed to add space between the bullet and the text */
     width: 1em; /* Also needed for space (tweak if needed) */
     margin-left: -1em; /* Also needed for space (tweak if needed) */
-    font-size: 2em;
+    font-size: 1em;
     align-self: center;
   }
   .job-info-item {
@@ -176,7 +182,7 @@
     justify-items: start;
   }
   .job-info .job-info-content h3 {
-    margin: 20px 0 0;
+    font-size: medium;
   }
 
   .job-info .job-info-content p {
@@ -253,15 +259,168 @@
     width: 45px;
     margin: 10px 5px;
   }
-  /* chứng chỉ */
+  /* CHỨNG CHỈ
+.certificate {
+  height: max-content;
+}
+.certificate .section-title {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.grid-item img {
+  width: 45%;
+  margin: 10px;
+}
+
+.certificate .grid-item-content h3 {
+  font-size: medium;
+}
+/* Project */
+  /* .project .container-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+.project .project-item {
+  display: grid;
+  grid-template-rows: 35% 20% 10% 35%;
+  margin: 10px;
+}
+.project .project-item-years {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.project p {
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  padding: 5px;
+}
+.project i {
+  width: 30px;
+}
+.project .project-item-title h3 {
+  padding: 20px;
+}
+.project button {
+  border-radius: 15px;
+  width: 80%;
+  height: 30px;
+  padding-bottom: 3px;
+}
+.project tr {
+  box-shadow: 0 -1px 1px rgb(59, 57, 57);
+}
+.project .project-item-content {
+  line-height: 1.5;
+}
+.project img {
+  padding: 20px;
+  width: 100%;
+  height: auto;
+}
+*/
+  */
+/* CHỨNG CHỈ */
+.certificate {
+    background-color: #fbf8fb;
+    margin: 20px;
+    height: 100%;
+  }
+  .certificate .grid-item-content {
+    text-align: start;
+    font-size: 13px;
+    line-height: 1.8;
+    padding: 10px;
+  }
+  .certificate .grid-item-content h3 {
+    font-size: large;
+  }
+  .certificate .section-title {
+    margin-bottom: 15px;
+  }
+  .grid-item {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    border: 1px solid #da7f25;
+    margin: 15px 0px;
+  }
+
+  .grid-item img {
+    width: 45%;
+    margin: 10px;
+  }
+  .grid-item .grid-item-content {
+    font-size: 13px;
+    line-height: 1.8;
+    padding: 10px;
+  }
+
+  /* Project */
+  .project .project-item {
+    margin-right: 2rem;
+    border: 1px solid rgb(188, 185, 185);
+    box-shadow: 2px 4px 5px rgb(188, 185, 185);
+    padding: 15px;
+  }
+  .project .project-item-years {
+    width: 100%;
+  }
+  .project h3 {
+    font-size: large;
+  }
+  .project p {
+    display: flex;
+    flex-direction: row;
+    font-size: medium;
+  }
+  .project a {
+    text-decoration: none;
+    text-decoration-color: blue;
+  }
+  .project i {
+    width: fit-content;
+    margin: 5%;
+  }
+  .project .project-item-title h3 {
+    padding: 20px;
+  }
+  .project button {
+    border-radius: 15px;
+    width: fit-content;
+    height: fit-content;
+    padding-bottom: 3px;
+  }
+  .project tr {
+    box-shadow: 0 -1px 1px rgb(59, 57, 57);
+  }
+  .project .project-item-content {
+    border: 1px soild black;
+    text-align: start;
+    color: black;
+    line-height: 1.5;
+  }
+  .project img {
+    text-align: center;
+    width: 100%;
+    height: auto;
+  }
 
   /* Footer */
+
   .footer i {
+    width: 100%;
     box-sizing: border-box;
     font-size: 100% !important;
   }
 }
-img {
+
+.banner img {
   width: 100%;
   filter: brightness(80%);
 }
