--- a/css/laptop.css
+++ b/css/laptop.css
@@ -382,16 +382,23 @@
   text-decoration-color: black;
 }
 .project i {
+  margin-right: 10px;
   width: 30px;
 }
 .project .project-item-title h3 {
   padding: 20px;
 }
 .project button {
+  border: 1px solid #199cdb;
+  background-color: #199cdb;
+  border-radius: 1px 1px 1px white;
   border-radius: 15px;
-  width: 80%;
-  height: 30px;
+  width: 100px;
+  height: fit-content;
   padding-bottom: 3px;
+}
+.project span {
+  color: #f7f7f7;
 }
 .project tr {
   box-shadow: 0 -1px 1px rgb(59, 57, 57);
